# stdreplay

./: Makefile  README.md  dune-project  stdreplay.opam
src/: dune  forkpty.ml  jbuild  stubs.c
src/config/: gen.ml
