opam-version: "1.2"
maintainer: "jeremie@dimino.org"
authors: ["Jérémie Dimino"]
license: "BSD3"
homepage: "https://github.com/diml/stdreplay"
bug-reports: "https://github.com/diml/stdreplay/issues"
dev-repo: "git://github.com/diml/stdreplay.git"
build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "base-unix"
  "base-threads"
  "base"
  "cmdliner"
  "stdio"
  "jbuilder"     {build & >= "1.0+beta9"}
]
